2008-05-21  Patrick Spendrin  <ps_ml@gmx.de>

    * src/lib/geodata/CMakeLists.txt
    
    Add LineStyle to CMakeLists.txt
    
2008-05-21  Patrick Spendrin  <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataLineStyle{.h,.cpp}
    
    Add LineStyle using LabelStyle as example
    
2008-05-21  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * data/maps/earth/openstreetmap/openstreetmap.dgml

    Set minimum zoom value to 900.

2008-05-21  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/FileStoragePolicy.cpp (updateFile)

    Remove broken conversion code.

2008-05-20  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/TextureTile.cpp (loadRawTile)

    Fix tile loading, do not use relfilename which might
    have an old value.

2008-05-20  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/FileStoragePolicy.cpp (updateFile)

    - Rename ptr -> convertedData.
    - Fix white space.

2008-05-20  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/FileStoragePolicy.cpp (updateFile)

    Convert images with format QImage::Format_Indexed8 to QImage::Format_RGB32.

2008-05-20  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/AbstractScanlineTextureMapper.cpp
    * src/lib/AbstractScanlineTextureMapper.h

    Fix projection for OpenStreetMap tiles.

2008-05-20  Jens-Michael Hoffmann  <jensmh@gmx.de>

    * src/lib/MergedLayerDecorator.h
    * src/lib/HttpFetchFile.cpp
    * src/lib/MergedLayerDecorator.cpp
    * src/lib/TextureTile.cpp
    * src/lib/TextureTile.h
    * src/lib/TinyWebBrowser.cpp
    * src/lib/TileLoader.cpp
    * src/lib/HttpFetchFile.h
    * src/lib/HttpDownloadManager.cpp
    * src/lib/MarbleModel.cpp
    * src/lib/HttpDownloadManager.h

    Fix HttpDownloadManager for OpenStreetMap theme.

2008-05-19  Torsten Rahn  <rahn@kde.org> 

    

2008-05-20  Patrick Spendrin <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataPlacemark.{h,cpp}:
    
    add setter Method for GeoDataPoint - this is needed by KML parsing.
    